[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fonts/MochiResized.tres" type="DynamicFont" id=1]
[ext_resource path="res://MarCatchSheep/Visuals/sheepsprite01.png" type="Texture" id=2]
[ext_resource path="res://MarCatchSheep/Visuals/MarisSprite01.png" type="Texture" id=3]
[ext_resource path="res://MarCatchSheep/Cutscenes/ScroingScene_Script.gd" type="Script" id=4]
[ext_resource path="res://Fonts/MochiTooltip.tres" type="DynamicFont" id=5]
[ext_resource path="res://MarCatchSheep/SFX/ComboCount001.ogg" type="AudioStream" id=6]
[ext_resource path="res://MarCatchSheep/VFX/ScoringScreenMaterial.tres" type="Material" id=7]

[node name="EndScreen" type="CanvasLayer"]

[node name="ColorRect" type="ColorRect" parent="."]
material = ExtResource( 7 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0313726, 0.0588235, 0.196078, 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="CenterContainer" type="CenterContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -147.0
margin_top = -219.0
margin_right = 147.0
margin_bottom = 219.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer"]
margin_right = 294.0
margin_bottom = 438.0
custom_constants/separation = 50

[node name="Label" type="Label" parent="Control/CenterContainer/VBoxContainer"]
margin_right = 294.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 1 )
text = "Total Score:"
uppercase = true

[node name="Label2" type="Label" parent="Control/CenterContainer/VBoxContainer"]
margin_top = 98.0
margin_right = 294.0
margin_bottom = 122.0
custom_fonts/font = ExtResource( 5 )
text = "Thank you for playing!"
align = 1
valign = 2
uppercase = true

[node name="GridContainer" type="GridContainer" parent="Control/CenterContainer/VBoxContainer"]
margin_top = 172.0
margin_right = 294.0
margin_bottom = 356.0
custom_constants/vseparation = 20
custom_constants/hseparation = 40
columns = 2

[node name="Point" type="Label" parent="Control/CenterContainer/VBoxContainer/GridContainer"]
margin_right = 173.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 1 )
text = "Points :"
align = 2

[node name="PointsDisplay" type="Label" parent="Control/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 213.0
margin_right = 213.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 1 )

[node name="Sepcial" type="Label" parent="Control/CenterContainer/VBoxContainer/GridContainer"]
margin_top = 68.0
margin_right = 173.0
margin_bottom = 116.0
custom_fonts/font = ExtResource( 1 )
text = "Specials :"
align = 2

[node name="SpecialsDisplay" type="Label" parent="Control/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 213.0
margin_top = 68.0
margin_right = 213.0
margin_bottom = 116.0
custom_fonts/font = ExtResource( 1 )

[node name="Bomb" type="Label" parent="Control/CenterContainer/VBoxContainer/GridContainer"]
margin_top = 136.0
margin_right = 173.0
margin_bottom = 184.0
custom_fonts/font = ExtResource( 1 )
text = "Bombs :"
align = 2

[node name="BombsDisplay" type="Label" parent="Control/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 213.0
margin_top = 136.0
margin_right = 213.0
margin_bottom = 184.0
custom_fonts/font = ExtResource( 1 )

[node name="return" type="ToolButton" parent="Control/CenterContainer/VBoxContainer"]
margin_top = 406.0
margin_right = 294.0
margin_bottom = 438.0
custom_fonts/font = ExtResource( 5 )
text = "return"

[node name="Tween" type="Tween" parent="Control"]

[node name="ScoreCounterSound" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 964, 529 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )
flip_h = true

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 76, 624 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/return" to="Control" method="_on_return_pressed"]
[connection signal="tween_all_completed" from="Control/Tween" to="Control" method="_on_Tween_tween_all_completed"]
